--- a/cards-prod.properties
+++ b/cards-prod.properties
@@ -1,9 +1,9 @@
-accounts.msg=Welcome to the EazyBank Account Application
-accounts.build-version=3
+cards.msg=Welcome to the EazyBank Account Application
+cards.build-version=3
 
-accounts.mailDetails.hostname=account@eazybank.com
-accounts.mailDetails.port=9000
+cards.mailDetails.hostname=account@eazybank.com
+cards.mailDetails.port=9000
 
-accounts.activeBranches[0]=Mumbai
-accounts.activeBranches[1]=London
-accounts.activeBranches[2]=New York
+cards.activeBranches[0]=Mumbai
+cards.activeBranches[1]=London
+cards.activeBranches[2]=New York
