--- a/cards-prod.properties
+++ b/cards-prod.properties
@@ -4,6 +4,6 @@ cards.build-version=3
 cards.mailDetails.hostname=account@eazybank.com
 cards.mailDetails.port=9000
 
-cards.activeBranches[0]=Mumbai
-cards.activeBranches[1]=London
-cards.activeBranches[2]=New York
+cards.activeBranches[0]=Lahore
+cards.activeBranches[1]=Rawalpindi
+cards.activeBranches[2]=Karachi
