--- a/eurekaserver.properties
+++ b/eurekaserver.properties
@@ -1,9 +1,6 @@
-accounts.msg=Welcome to the EazyBank Account Application
-accounts.build-version=3
+server.port=8070
 
-accounts.mailDetails.hostname=account@eazybank.com
-accounts.mailDetails.port=9000
-
-accounts.activeBranches[0]=Mumbai
-accounts.activeBranches[1]=London
-accounts.activeBranches[2]=New York
+eureka.instance.hostname=localhost
+eureka.client.registerWithEureka=false
+eureka.client.fetchRegistry=false
+eureka.client.serviceUrl.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/
