--- a/gatewayserver.properties
+++ b/gatewayserver.properties
@@ -1,9 +1,6 @@
-accounts.msg=Welcome to the EazyBank Account Application
-accounts.build-version=3
+server.port=8072
 
-accounts.mailDetails.hostname=account@eazybank.com
-accounts.mailDetails.port=9000
-
-accounts.activeBranches[0]=Mumbai
-accounts.activeBranches[1]=London
-accounts.activeBranches[2]=New York
+eureka.instance.preferIpAddress=true
+eureka.client.registerWithEureka=true
+eureka.client.fetchRegistry=true
+eureka.client.serviceUrl.defaultZone=http://localhost:8070/eureka
